@@ -9,8 +9,10 @@ gcl (2.6.6-2) unstable; urgency=low
     streams
   * New Upstream release version
   * Native-reloc feature
+  * Add daemon capabilities to server sockets, document socket and
+    accept
 
- -- Camm Maguire <camm@enhanced.com>  Sat, 30 Apr 2005 23:04:53 +0000
+ -- Camm Maguire <camm@enhanced.com>  Sun,  1 May 2005 04:12:16 +0000
 
 gcl (2.6.6-1) unstable; urgency=high
 
